# enrollment_py

./: .env_example  .gitignore  .pre-commit-config.yaml  .sqlfluff  Makefile  README.md  pyproject.toml
.github/workflows/: format_and_test.yml
documentation/: README.md  index.html  objects.inv
documentation/_static/: custom.css
infra/: .dockerignore  Dockerfile  Dockerfile.rabbitmq  docker-compose.yml
scripts/: seed_db.py
src/: main.py  settings.py
src/app/services/: age_group.py  enrollment.py  enrollment_admin.py
src/app/usecases/: age_group.py  enrollment.py  enrollment_admin.py
src/domain/: age_group.py  enrollment.py
src/infra/api/: __init__.py  age_groups.py  enrollment.py  enrollment_admin.py
src/infra/common/: database.py  database_lock.py  logging.py
src/infra/dependencies/: age_groups.py  enrollment.py  enrollment_admin.py
src/infra/enumerators/: enrollment.py
src/infra/messaging/: rabbitmq.py
src/infra/repositories/: age_group.py  base.py  enrollment.py
src/infra/schemas/: age_group.py  enrollment.py  enrollment_admin.py  health.py  pagination.py
src/infra/security/: basic_auth.py
src/infra/utils/: pagination.py
src/worker/: consumer.py
tests/: conftest.py
tests/consumer/: test_consumer.py
tests/domain/: test_age_group.py  test_enrollment.py
tests/infra/common/: test_logging.py
tests/infra/messaging/: test_rabbitmq.py
tests/infra/repos/: test_age_group_repo.py  test_base.py  test_enrollment_repo.py  test_file_lock.py  test_pagination_n_search.py
tests/infra/security/: test_basic_auth_guard.py
tests/integration/: test_age_groups_api.py  test_enrollment_admin.py  test_enrollment_api.py
